style: spacing fix

--- a/print.css
+++ b/print.css
@@ -178,7 +178,7 @@ h2 {
     grid-column: 1;
     grid-row: 3;
     justify-self: start;
-    margin-top: 0.2em;
+    margin: 0;
     border: none;
     padding: 0;
 }
